#pragma once

enum class OutputFormat {
    normal,
    quiet,
    stats
};